Polytechnique_Robot_Mapping/branche-70/Correction_tp2.txt
Polytechnique Montréal

Département de génie informatique et génie logiciel

INF1900: Projet initial de système embarqué

Grille de correction des programmes:

Identification:
  Travail    : Introduction aux machines à états finis logicielles
  Section #  : 4
  Équipe #   : 70
  Correcteur : Claudia Onorato

Lisibilité:
- En-têtes en début de programme et de fonctions   (0.5/1)
- Identificateurs significatifs (variables, etc.)  (1/1)
- Commentaires aux endroits stratégiques           (1/1)
- Indentation et facilité de lecture               (1/1)
- Broches, ressources matérielles bien identifiées (0/1)

Modularité et comprehension:
- Les fonctions sont assez courtes, bien établies et avec de bons paramètres  (0.75/1)
- Le code reflète une bonne compréhension des concepts de base                (2/2)
- Le code montre que la solution proposée permet de bien résoudre le problème (2/2)

Fonctionnalité:
- Soumission réussie sous GIT (bon endroit, sans fichiers inutiles) (3/3)
- Compilation sans "warnings" et sans erreurs                       (0/2)
- Fonctionnement correct (évalué en "boite noire")                  (4/5)

Total: 15.25/20

Commentaires du correcteur: 
Dans le main du probleme1, vous faites appel à probleme2 à la place de probleme1, ce qui génère un erreur.
Il se trouve également des warnings quant à la manière dont vous avez définis votre enum.
Pour le problème 1, la lumière devrait s'allumer après avoir relâché le bouton pour la 5e fois, et non après avoir appuyé.

Indiquer en commentaire quels sont les ports de sortie! Ça facilite la correction.

======================= Basé sur le commit suivant =============================
commit f950c391850e242a1c35abfb4e524e0bafc01fcf
Author: Dylan Batista-Moniz <dylan.batista-moniz@polymtl.ca>
Date:   Wed Jan 23 14:26:36 2019 -0500

    DB: Dossier contenant le tp2, qui contient les dossier  pb1 & pb2, qui contiennent les .cpp et Makefile des problemes 1 et 2.

======================= Fichiers Indésirables =============================


======================= Output de make pour les problemes =============================
======================= output de make dans tp/tp2/pb1 =============================
avr-gcc -I. -MMD  -g -mmcu=atmega324pa -Os -fpack-struct -fshort-enums -funsigned-bitfields -funsigned-char -Wall                                         -fno-exceptions      -c pb1.cpp
pb1.cpp: In function 'void probleme1()':
pb1.cpp:37:18: warning: scoped enums only available with -std=c++11 or -std=gnu++11 [enabled by default]
     enum State : int{state1, state2, state3, state4, state5}; //Les 5 etats sont definis
                  ^
pb1.cpp: In function 'int main()':
pb1.cpp:67:16: error: 'probleme2' was not declared in this scope
      probleme2();
                ^
make: *** [pb1.o] Error 1

======================= output de make dans tp/tp2/pb2 =============================
avr-gcc -I. -MMD  -g -mmcu=atmega324pa -Os -fpack-struct -fshort-enums -funsigned-bitfields -funsigned-char -Wall                                         -fno-exceptions      -c pb2.cpp
pb2.cpp: In function 'void probleme2()':
pb2.cpp:50:18: warning: scoped enums only available with -std=c++11 or -std=gnu++11 [enabled by default]
     enum State : int{state0, state1, state2, state3, state4, state5, state6}; //Les 7 etat sont definis
                  ^
avr-gcc -Wl,-Map,TP2.out.map -mmcu=atmega324pa -o TP2.out  pb2.o \
	-lm 

